<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chal2Page1"
    android:background="@color/memorychallenge"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/brain_pic_icon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/chal2_page1_icon"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="25dp"
        android:contentDescription="@string/str_memorychallenge"
        android:transitionName="memory"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".Chal2Page1"
        android:background="@color/memorychallenge"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_memory"
            android:textColor="#000000"
            android:textSize="30sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_challenge"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:padding="5dp" />
    </LinearLayout>

</LinearLayout>