<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/memorychallenge"

    android:orientation="vertical"
    tools:context=".Chal2Page3" >
    <include
        android:id="@+id/memory_app_bar"
        layout="@layout/memory_app_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/str_pic_que"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@color/memory_app_bar"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/pic1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:src="@drawable/chal1_page1_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@color/memory_app_bar"
            >
            <TextView android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/roundrectback"
                android:id="@+id/but_yes"
                android:text="Yes"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"/>

            <TextView android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/roundrectback"
                android:id="@+id/but_no"
                android:text="No"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="#ffffff"
                android:padding="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/timeleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="30sp"
            android:text="@string/str_timeleft"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="09"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_sec"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </LinearLayout>
        </LinearLayout>
</LinearLayout>