<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/memorychallenge"

    android:orientation="vertical"
    tools:context=".Chal2Page2" >
    <include
        android:id="@+id/memory_app_bar"
        layout="@layout/memory_app_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/str_mem_the_pic"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/pic1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

            <ImageView
                android:id="@+id/pic2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

            <ImageView
                android:id="@+id/pic3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/pic4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

            <ImageView
                android:id="@+id/pic5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

            <ImageView
                android:id="@+id/pic6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/pic7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

            <ImageView
                android:id="@+id/pic8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

            <ImageView
                android:id="@+id/pic9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/chal1_page1_icon" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dp">
        <TextView
            android:id="@+id/timeleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="30sp"
            android:text="@string/str_timeleft"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_sec"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </LinearLayout>
        </LinearLayout>
</LinearLayout>